[Client] launcher icon

--- a/Client/app/src/main/res/values/strings.xml
+++ b/Client/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">hyunOORong</string>
+    <string name="app_name">아싸탈출</string>
 
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
